--- a/systemArticles.html
+++ b/systemArticles.html
@@ -11,20 +11,20 @@
         <a href="index.html" id="logo"></a>
     </header>
     <section id="topNav">
-    <nav class="topNav">
-        <ul>
-            <li><a href="#">שאלות ותשובות</a></li>
-            <li class="navBorder"><a href="conatctForm.html">צרו קשר</a></li>
-            <li class="navBorder"><a href="#">כתבו עלינו</a></li>
-            <li class="navBorder"><a href="#">בלוג</a></li>
-            <li class="navBorder"><a href="#">פורום</a></li>
-            <li class="navBorder"><a href="fiencookHouse.html">בית פין קוק</a></li>
-            <li class="navBorder"><a href="#">יאיר פיינברג</a></li>
-            <li class="navBorder"><a href="index.html">עמוד הבית</a></li>
-        </ul>
-    </nav>
-    <div class="clear"></div>
-        </section>
+        <nav class="topNav">
+            <ul>
+                <li><a href="#">שאלות ותשובות</a></li>
+                <li class="navBorder"><a href="conatctForm.html">צרו קשר</a></li>
+                <li class="navBorder"><a href="#">כתבו עלינו</a></li>
+                <li class="navBorder"><a href="#">בלוג</a></li>
+                <li class="navBorder"><a href="#">פורום</a></li>
+                <li class="navBorder"><a href="fiencookHouse.html">בית פין קוק</a></li>
+                <li class="navBorder"><a href="#">יאיר פיינברג</a></li>
+                <li class="navBorder"><a href="index.html">עמוד הבית</a></li>
+            </ul>
+        </nav>
+        <div class="clear"></div>
+    </section>
     <main id="contentMain">
         <nav class="mainNav">
             <ul>
@@ -36,24 +36,24 @@
         <div class="clear"></div>
         <section class="contentArticle">
             <h1 id="articleHeader">מאמרי מערכת</h1>
-            <article id="articleContentStyle1">
-                <a href="articlePage.html?articleNum=0"><img id="articleContentStyle1Img" class="contentPicture" src="images/systemArticlePic1.jpg"></a>
+            <article>
+                <a href="articlePage.html?articleNum=0"><img class="articleContentStyleImg contentPicture" src="images/systemArticlePic1.jpg"></a>
                 <a href="articlePage.html?articleNum=0"><p>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p></a>
                 <p class="pGreen">27 באוקטובר 2010</p>
                 <p class="regularContent">זהו טקסט התוכן של המאמר הראשון. בטקסט המקוצר הזה המופיע בעמוד הבית יהיה הקדמה לטקסט המורחב שיופיע במהלך הכתבה. על מנת לראות את הכתבה במלואה יש ללחוץ על הקישור שמופיע בסוף הטקסט המקוצר...---></p>
                 <p class="nextArticle"><a href="articlePage.html?articleNum=0">למאמר המלא</a></p>
                 <img class="greenAfixPos" src="images/greenArrow.png">
             </article>
-            <article id="articleContentStyle2">
-                <a href="#"><img id="articleContentStyle2Img" class="contentPicture" src="images/systemArticlePic2.jpg"></a>
+            <article>
+                <a href="#"><img class="articleContentStyleImg contentPicture" src="images/systemArticlePic2.jpg"></a>
                 <a href="#"><p>זאת הכותרת של המאמר השני</p></a>
                 <p class="pGreen">27 באוקטובר 2010</p>
                 <p class="regularContent">זהו טקסט התוכן של המאמר הראשון. בטקסט המקוצר הזה המופיע בעמוד הבית יהיה הקדמה לטקסט המורחב שיופיע במהלך הכתבה. על מנת לראות את הכתבה במלואה יש ללחוץ על הקישור שמופיע בסוף הטקסט המקוצר...---></p>
                 <p class="nextArticle"><a href="#">למאמר המלא</a></p>
                 <img class="greenAfixPos" src="images/greenArrow.png">
             </article>
-            <article id="articleContentStyle3">
-                <a href="#"><img id="articleContentStyle3Img" class="contentPicture" src="images/systemArticlePic3.jpg"></a>
+            <article>
+                <a href="#"><img class="articleContentStyleImg contentPicture" src="images/systemArticlePic3.jpg"></a>
                 <a href="#"><p>זאת הכותרת של המאמר השלישי</p></a>
                 <p class="pGreen">27 באוקטובר 2010</p>
                 <p class="regularContent">זהו טקסט התוכן של המאמר הראשון. בטקסט המקוצר הזה המופיע בעמוד הבית יהיה הקדמה לטקסט המורחב שיופיע במהלך הכתבה. על מנת לראות את הכתבה במלואה יש ללחוץ על הקישור שמופיע בסוף הטקסט המקוצר...---></p>
