--- a/articlePage.html
+++ b/articlePage.html
@@ -39,9 +39,9 @@
         </nav>
         <div class="clear"></div>
         <section class="contentArticle">
-            <h2 id="articleHeader">מאמרי מערכת</h2>
+            <h1>מאמרי מערכת</h1>
             <article id="vaccumAarticleStyle">
-                <h2></h2>
+                <h1></h1>
                 <h4 id="vaccumAarticleStyleH4">9 בדצמבר 2010</h4>
                 <p id="vaccumAarticleStyleParaBold">בישול בואקום היא טכניקת בישול ייחודית,שמעשירה את החוויה הקולינרית שלנו במרקמים, בטעמים ובצבעים הטבעיים של מוצרי המזון השונים בדרכים שכמעט אי אפשר לקבל בשיטות הבישול הקלאסיות.</p>
                 <p>השיטה פשוטה לביצוע. בשלב הראשון נאטם המזון בשקית ואקום ייעודית ובשלב השני מונחת השקית באמבט עם נוזל, שהטמפרטורה שלו נשמרת ומבוקרת בדיוק רב.</p>
