system article links

--- a/systemArticles.html
+++ b/systemArticles.html
@@ -45,19 +45,19 @@
                 <img class="greenAfixPos" src="images/greenArrow.png">
             </article>
             <article id="articleContentStyle2">
-                <a href="#"><img id="articleContentStyle2Img" class="contentPicture" src="images/systemArticlePic2.jpg"></a>
-                <a href="#"><p>זאת הכותרת של המאמר השני</p></a>
+                <a href="articlePage.html?articleNum=1"><img id="articleContentStyle2Img" class="contentPicture" src="images/systemArticlePic2.jpg"></a>
+                <a href="articlePage.html?articleNum=1"><p>זאת הכותרת של המאמר השני</p></a>
                 <p class="pGreen">27 באוקטובר 2010</p>
                 <p class="regularContent">זהו טקסט התוכן של המאמר הראשון. בטקסט המקוצר הזה המופיע בעמוד הבית יהיה הקדמה לטקסט המורחב שיופיע במהלך הכתבה. על מנת לראות את הכתבה במלואה יש ללחוץ על הקישור שמופיע בסוף הטקסט המקוצר...---></p>
-                <p class="nextArticle"><a href="#">למאמר המלא</a></p>
+                <p class="nextArticle"><a href="articlePage.html?articleNum=1">למאמר המלא</a></p>
                 <img class="greenAfixPos" src="images/greenArrow.png">
             </article>
             <article id="articleContentStyle3">
-                <a href="#"><img id="articleContentStyle3Img" class="contentPicture" src="images/systemArticlePic3.jpg"></a>
-                <a href="#"><p>זאת הכותרת של המאמר השלישי</p></a>
+                <a href="articlePage.html?articleNum=2"><img id="articleContentStyle3Img" class="contentPicture" src="images/systemArticlePic3.jpg"></a>
+                <a href="articlePage.html?articleNum=2"><p>זאת הכותרת של המאמר השלישי</p></a>
                 <p class="pGreen">27 באוקטובר 2010</p>
                 <p class="regularContent">זהו טקסט התוכן של המאמר הראשון. בטקסט המקוצר הזה המופיע בעמוד הבית יהיה הקדמה לטקסט המורחב שיופיע במהלך הכתבה. על מנת לראות את הכתבה במלואה יש ללחוץ על הקישור שמופיע בסוף הטקסט המקוצר...---></p>
-                <p class="nextArticle"><a href="#">למאמר המלא</a></p>
+                <p class="nextArticle"><a href="articlePage.html?articleNum=2">למאמר המלא</a></p>
                 <img class="greenAfixPos" src="images/greenArrow.png">
             </article>
         </section>
