--- a/articlePage.html
+++ b/articlePage.html
@@ -39,7 +39,7 @@
         </nav>
         <div class="clear"></div>
         <section class="contentArticle">
-            <h2>מאמרי מערכת</h2>
+            <h2 id="articleHeader">מאמרי מערכת</h2>
             <article id="vaccumAarticleStyle">
                 <h1></h1>
                 <h4 id="vaccumAarticleStyleH4">9 בדצמבר 2010</h4>
