--- a/systemArticles.html
+++ b/systemArticles.html
@@ -35,7 +35,7 @@
         </nav>
         <div class="clear"></div>
         <section class="contentArticle">
-            <h1>מאמרי מערכת</h1>
+            <h2 id="articleHeader">מאמרי מערכת</h2>
             <article id="articleContentStyle1">
                 <a href="articlePage.html?articleNum=0"><img id="articleContentStyle1Img" class="contentPicture" src="images/systemArticlePic1.jpg"></a>
                 <a href="articlePage.html?articleNum=0"><p>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p></a>
