--- a/conatctForm.html
+++ b/conatctForm.html
@@ -34,7 +34,7 @@
             </ul>
         </nav>
         <div class="clear"></div>
-        <section id="contentArticle">
+        <section id="conatactFormAarticleStyle">
             <h2 id="articleHeader">צור קשר</h2>
             <section id="contactFormAarticleStyle">
                 <h1>שלחו לנו מייל</h1>
