fix termomix link

--- a/recipes.html
+++ b/recipes.html
@@ -42,7 +42,7 @@
                     <span><a href="recipePage.html?recipeNum=1" class="orange">"שאט וודקה ואבטיח" </a></span>ב"מתכונים לתרמומיקס". כמה פשוט ככה טעים. וגם מרענן! יש לנו גם מתכוני גולשים חדשים ומרגשים, וכולם מאוד פשוטים להכנה. תודה לכל מי ששלח לנו מתכון, המשיכו לשלוח לנו ולמלא לנו את מלאי המתכונים ואת הלב.
                 </p>
                 <section id="picRecipe">
-                    <a href="recipePage?recipeNum=0.html"><img src="images/termomiksRecipe.jpg"></a>
+                    <a href="recipePage.html?recipeNum=0"><img src="images/termomiksRecipe.jpg"></a>
                     <a href="#"><img src="images/fiencookRecipe.jpg"></a>
                     <a href="#"><img src="images/slidersRecipe.jpg"></a>
                 </section>
