--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
             </article>
             <h3 class="h3contentWorld">מאמרי מערכת</h3>
             <article class="systemArticle">
-                <img src="images/systemArticlePic1.jpg" class="systemArticlePic">
-                <p class="systemArticleCotert">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p>
+                <a href="articlePage.html?articleNum=0"><img src="images/systemArticlePic1.jpg" class="systemArticlePic"></a>
+                <a href="articlePage.html?articleNum=0"><p class="systemArticleCotert">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p></a>
                 <p class="systemArticleDate">27 באוקטובר 2010</p>
                 <p class="systemArticleText">טקסט התוכן של המאמר הראשון. בטקסט המקוצר המופיע בעמוד הבית יוצגו תמיד ארבעת השורות...</p>
                 <p class="articleLink al1"><a href="articlePage.html?articleNum=0"> למאמר המלא </a><img class="arrow" src="images/greenArrow.png"></p>
 
             </article>
             <article class="systemArticle">
-                <img src="images/systemArticlePic2.jpg" class="systemArticlePic">
-                <p class="systemArticleCotert">הכותרת של המאמר השני</p>
+                <a href="articlePage.html?articleNum=1"><img src="images/systemArticlePic2.jpg" class="systemArticlePic"></a>
+                <a href="articlePage.html?articleNum=1"><p class="systemArticleCotert">הכותרת של המאמר השני</p></a>
                 <p class="systemArticleDate">15 בינואר 2010</p>
                 <p class="systemArticleText">טקסט התוכן של המאמר השני. גם כאן מוצגות רק ארבעת השורות הראשונות של המאמר והתוכן ייקטע...</p>
                 <p class="articleLink al1"><a href="#">למאמר המלא </a><img class="arrow" src="images/greenArrow.png"></p>
